# hot-rolling-finish-aps

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_GUIDE.md  CODE_REVIEW_MEETING_AGENDA.md  CODE_REVIEW_QUICK_REFERENCE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_SETUP.md  FINAL_WORK_SUMMARY.md  PERFORMANCE_MONITORING.md  PHASE_3.5_BRANCH_COVERAGE_OPTIMIZATION.md  PHASE_3_SUMMARY.md  PROJECT_AUDIT_REPORT.md  README.md  TECHNICAL_DEBT_REPORT.md  TEST_REPORT.md  UNIT_TEST_PLAN.md  WORKBENCH_QUICK_FIX.md  WORKBENCH_REFACTOR_GUIDE.md  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.ts  vitest.config.ts  热轧精整排产系统_决策结构重构方案_v1.0.docx
coverage/: clover.xml  coverage-final.json  index.html
docs/: ARCHITECTURE.md  CAPACITY_CALENDAR_DATA_ANALYSIS_REPORT.md  CI_CD.md  CODE_QUALITY_COMPREHENSIVE_REPORT.md  FRONTEND_COMPREHENSIVE_ANALYSIS_REPORT.md  INDEX.md  MIGRATION_GUIDE_capacity_pool_versioning.md  P1-3_API_TYPE_VALIDATION_SUMMARY.md  P1-4_COMPONENT_DECOMPOSITION_SUMMARY.md  QUICK_START_MIGRATION.md  REFACTOR_TODO.md  TEST_EVALUATION_REPORT.md  dev_plan_path_rule_v0.6.md
icons/: ICON_GUIDE.md  README.txt  icon.icns
locales/: en.yml  zh-CN.yml
migrations/: README.md  v0.10_empty_day_recover_threshold.sql  v0.11_frontend_runtime_config.sql  v0.2_importer_schema.sql  v0.3_material_state_enhancement.sql  v0.4_decision_layer.sql  v0.5_strategy_draft.sql  v0.6_path_override_pending.sql  v0.6_path_rule_extension.sql  v0.6_path_rules_complete.sql  v0.7_dynamic_maturity_calculation.sql  v0.8_path_override_reject_flow.sql  (+1 more)
scripts/: diagnose_import.sh  (+5 more)
(+858 files in other folders)
