[package]
name = "hot-rolling-aps"
version = "0.1.0"
edition = "2021"
authors = ["Hot Rolling APS Team"]
description = "热轧精整排产系统 - 决策支持系统"

[lib]
name = "hot_rolling_aps"
path = "src/lib.rs"

[[bin]]
name = "hot-rolling-aps"
path = "src/main.rs"

[[bin]]
name = "generate_test_data"
path = "tests/fixtures/generate_test_data.rs"

[[bin]]
name = "import_test_data"
path = "tests/fixtures/import_test_data.rs"

[dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# 数据库
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# 文件解析
calamine = "0.25"      # Excel 解析
csv = "1.3"            # CSV 解析

# 异步 trait
async-trait = "0.1"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志系统
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# 国际化
rust-i18n = "3"

# 系统目录
dirs = "5.0"

# Tauri (可选特性)
tauri = { version = "1.5", optional = true , features = [ "fs-read-file", "dialog-open"] }

[features]
default = ["tauri-app"]
tauri-app = ["tauri"]
custom-protocol = ["tauri-app", "tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3.0"       # 测试临时文件

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
